--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 python:
 - 3.6
-install: pip install -U tox-travis
+install:
+- pip install -U tox-travis
+- python -m spacy download en
 script: tox
