--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -6,7 +6,4 @@ build:
 
 python:
     version: 3.6
-    pip_install: true
-    extra_requirements:
-        - tests
-        - docs
+    pip_install: false
