--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,8 @@ deps =
 ;     -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
+    pip install spacy
+    python -m spacy download en
     py.test --basetemp={envtmpdir}
 
 
