--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ requests==2.18.4
 numpy==1.14.0
 click==6.7
 beautifulsoup4==4.6.0
-psutil
+psutil>=5.0
+
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.0.0/en_core_web_sm-2.0.0.tar.gz
