--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
 - 3.6
+before_install:
+- python -m spacy download en_core_web_sm
 install:
 - pip install -U tox-travis
 script: tox
