--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 python:
-- 3.6
-before_install:
-- pip install spacy
-- python -m spacy download en_core_web_sm
+- 3.7
 install:
 - pip install -U tox-travis
-script: tox
+before_script:
+- python -m spacy download en_core_web_sm
+script:
+- tox
