--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
 - 3.7
 install:
 - pip install -U tox-travis
+- pip install -U spacy
 before_script:
 - python -m spacy download en_core_web_sm
 script:
