--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,8 +3,10 @@ include CONTRIBUTING.rst
 include HISTORY.rst
 include LICENSE
 include README.rst
-include data/testdata/*.txt
-include data/testdata/level_2/*.txt
+include textdirectory/data/testdata/*.txt
+include textdirectory/data/testdata/level_2/*.txt
+include textdirectory/data/stopwords/*.txt
+include textdirectory/data/language_models/*.lm
 
 recursive-include tests *
 recursive-exclude * __pycache__
