--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-spacy==2.2.3
-requests==2.22.0
-numpy==1.18.1
-click==7.0
-beautifulsoup4==4.8.2
+click>=7.0
+spacy>=3.1.0
+requests>=2.22.0
+numpy>=1.18.1
+beautifulsoup4>=4.8.2
 psutil>=5.6.7
+lxml>=4.6.3
+tqdm>=4.61.0
 
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl
