--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,4 +1,4 @@
-pip==19.3.1
+pip>=19.3.1
 bumpversion==0.5.3
 wheel==0.33.6
 watchdog==0.9.0
@@ -7,8 +7,8 @@ tox==3.14.3
 coverage==5.0.3
 Sphinx==2.3.1
 twine==3.1.1
-pytest==5.3.3
+pytest>=5.3.3
 pytest-runner==5.2
 psutil>=5.6.7
 
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl
