--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,14 +1,15 @@
-pip>=19.3.1
-bumpversion==0.5.3
-wheel==0.33.6
-watchdog==0.9.0
-flake8==3.7.9
-tox==3.14.3
-coverage==5.0.3
-Sphinx==2.3.1
-twine==3.1.1
-pytest>=5.3.3
-pytest-runner==5.2
-psutil>=5.6.7
+pip>=22.2.2
+bumpversion>=0.6.0
+wheel>=0.33.6
+watchdog>=2.1.9
+flake8>=5.0.4
+tox>=3.26.0
+coverage>=6.4.4
+Sphinx>=5.2.0
+twine>=4.0.1
+pytest>=7.1.3
+pytest-runner>=6.0.0
+psutil>=5.9.2
+isort>=5.10.1
 
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl
