--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ beautifulsoup4>=4.11.1
 psutil>=5.9.2
 lxml>=4.9.1
 tqdm>=4.64.1
+ftfy>=6.1.1
 
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl
